cleaned and updated code
